--- a/view/js/directives/about.html
+++ b/view/js/directives/about.html
@@ -1,8 +1,15 @@
-<div class="k-block">
-    <h1 style="margin-bottom: 0;padding-bottom: 0">Koru Care NZ is an independent charity</h1>
-    <div style="font-size: 24px;text-align: center;padding: 0 20%;">and as such relies on the generosity and support of the community to make its trips possible. A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
-        How To Donate</div>
+<div class="k-block" id="about-comp">
+    <h1 class="k-title">Koru Care NZ is an independent charity</h1>
+    <div class="k-sub-title">and as such relies on the generosity and support of the community to make its trips possible. A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
+    </div>
 
     <p>To start donating to help Koru Care you can select one of the regions below:</p>
+
+    <div>
+        <svg fill="#000000" height="60" viewBox="0 0 24 24" width="60" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+            <path d="M0-.75h24v24H0z" fill="none"/>
+        </svg>
+    </div>
 
 </div>
