--- a/view/js/directives/hero.html
+++ b/view/js/directives/hero.html
@@ -1,4 +1,4 @@
-<div class="k-hero">
+<div class="k-hero" name="hero-comp" id="hero-comp">
     <div class="k-banner-wapper k-bottom-right">
         <div class="k-banner  k-magenta" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             Making dreams come true
@@ -6,5 +6,9 @@
         <div class="k-banner k-magenta" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             for over 30 years
         </div>
+    </div>
+    <div class="k-hero-caption">
+        <small>{{heroObj.caption}}</small>
+        <h4>{{heroObj.region}}</h4>
     </div>
 </div>
