--- a/view/js/directives/donate.html
+++ b/view/js/directives/donate.html
@@ -1,6 +1,8 @@
-<div class="k-block k-donate">
+<div class="k-block k-donate" name="donate-comp" id="donate-comp">
 
-    <!--<h1>Donate</h1>-->
+    <h1 class="k-title">Make a Donation</h1>
+    <div class="k-sub-title">A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
+    </div>
 
     <div class="k-random-donate" data-aos="fade-up">
         <label>I want to donate</label>
@@ -8,7 +10,14 @@
         <div class="k-button">Make Donation</div>
     </div>
 
-    <div class="k-fixed-donate">
+    <div data-aos="fade-up">
+        <svg fill="#000000" height="60" viewBox="0 0 24 24" width="60" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+            <path d="M0-.75h24v24H0z" fill="none"/>
+        </svg>
+    </div>
+
+    <div class="k-fixed-donate" data-aos="fade-up">
 
         <div class="k-donate-amount">
             <div class="k-donate-dollar">
@@ -29,6 +38,14 @@
         <div class="k-donate-amount">
             <div class="k-donate-dollar">
                 $75
+            </div>
+            <div class="k-donate-prompt">make a dream come true</div>
+            <div class="k-button">Donate</div>
+        </div>
+
+        <div class="k-donate-amount">
+            <div class="k-donate-dollar">
+                $100
             </div>
             <div class="k-donate-prompt">make a dream come true</div>
             <div class="k-button">Donate</div>
