--- a/view/js/directives/header.html
+++ b/view/js/directives/header.html
@@ -4,26 +4,32 @@
     </div>
     <div class="k-navs-middle">
         <div class="k-middle-wrapper">
-            <div class="k-navs-middle-nav">
+            <div class="k-navs-middle-nav" simplePageScroll href="#about-comp">
                 <h1>About</h1>
             </div>
-            <div class="k-navs-middle-nav">
+            <div class="k-navs-middle-nav" simplePageScroll href="#regions-comp">
                 <h1>Regions</h1>
             </div>
-            <div class="k-navs-middle-nav">
+            <div class="k-navs-middle-nav" simplePageScroll href="#media-comp">
                 <h1>Partners</h1>
             </div>
-            <div class="k-navs-middle-nav">
+            <div class="k-navs-middle-nav" simplePageScroll href="#donate-comp">
                 <h1>Donate</h1>
             </div>
         </div>
     </div>
     <div class="k-navs-right">
         <ul>
-            <li style="margin-right: 15px;">
+            <li style="margin-right: 15px;" class="k-navs-right-search">
                 <svg fill="#323232" height="42" viewBox="0 0 24 24" width="42" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
                     <path d="M0 0h24v24H0z" fill="none"/>
+                </svg>
+            </li>
+            <li style="margin-right: 15px;" class="k-navs-right-menu">
+                <svg fill="#000000" height="42" viewBox="0 0 24 24" width="42" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
                 </svg>
             </li>
         </ul>
