--- a/view/js/directives/media.html
+++ b/view/js/directives/media.html
@@ -1,5 +1,5 @@
-<div class="k-block k-video">
-    <h1 style="padding-bottom: 0;margin-bottom: 0">Partners</h1>
+<div class="k-block k-video" name="media-comp" id="media-comp">
+    <h1 style="padding-bottom: 0;margin-bottom: 0">Partnerships</h1>
     <div style="text-transform: uppercase;text-align: center;margin-bottom: 15px;">Air New Zealand</div>
     <video width="100%" height="600" id="player1" preload="none">
         <source type="video/youtube" src="https://youtu.be/lhjEDQT4c5Y" />
