--- a/view/js/directives/regions.html
+++ b/view/js/directives/regions.html
@@ -1,4 +1,4 @@
-<div class="k-block">
+<div class="k-block" name="regions-comp" id="regions-comp">
     <div class="k-location-tiles" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <ul class="k-location-ul clearfix" data-aos="fade-up">
             <li data-aos="fade-up">
