--- a/view/style/style.css
+++ b/view/style/style.css
@@ -25,6 +25,7 @@ h1 {
     font-weight: bolder;
     padding: 10px 0px 0px 0px;
     margin: 5px 20px;
+    cursor: pointer;
 }
 
 .k-logo{
@@ -43,7 +44,7 @@ h1 {
 }
 
 .k-navs-middle{
-    display: table;
+    display: none;
     margin: 0 auto;
 }
 
@@ -101,8 +102,12 @@ h1 {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover !important;
     position: relative;
+    transition:all 0.5s ease;
+    -webkit-transition:all 0.5s ease;
+    -o-transition:all 0.5s ease;
+    -moz-transition:all 0.5s ease;
 }
 
 .k-banner{
@@ -199,8 +204,57 @@ h1 {
 footer{
     width:100%;
     min-height: 300px;
-    background: #232323;
     padding:0;
+    background: #eee;
+}
+
+.k-footer-top{
+    background: #232323;
+    width:100%;
+    height:33%;
+    padding: 0 10%;
+}
+
+.k-footer-top-airnz{
+    padding: 5px 20px;
+    position:relative;
+}
+
+.k-footer-top-airnz img{
+    height: 100px;
+    width:auto;
+}
+
+.k-footer-top-airnz p{
+    text-transform: uppercase;
+    color: #fff;
+    padding-bottom: 0;
+    line-height: 1.0;
+    position: absolute;
+    left: 35px;
+    top: 15px;
+    font-size: 12px;
+}
+
+.k-footer-bottom{
+    width:100%;
+    padding: 0 10%;
+}
+
+.k-footer-bottom ul{
+    list-style: none;
+    padding: 10px 20px;
+    display: inline-flex;
+}
+
+.k-footer-bottom ul li:first-child{
+    margin-left:0;
+
+}
+
+.k-footer-bottom ul li{
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .k-map{
@@ -302,21 +356,26 @@ footer{
 }
 
 .k-otago{
-    background: url("../img/13731054_1200209350003082_719186638445735887_o.jpg") no-repeat 55% 10%;
+    background: url("../img/southland/Universal group shot.jpg") no-repeat;
+    background-size: cover !important;
 }
 .k-auckland{
-    background: url("../img/12195124_10203617835205587_6323645368294507667_o.jpg") no-repeat 60% 60%;
+    background: url("../img/auckland/Image2.jpg") no-repeat;
+    background-size: cover !important;
 }
 .k-southland{
-    background: url("../img/14183780_1096959707006313_799921147881265235_n.jpg") no-repeat 0;
+    background: url("../img/dunedin/20161013_191549.jpg") no-repeat;
+    background-size: cover !important;
 }
 .k-christhurch{
-    background: url("../img/14192550_1096959767006307_1953057803412548037_n.jpg") no-repeat 10% 10%;
+    background: url("../img/christchurch/IMG_5073.PNG") no-repeat;
+    background-size: cover !important;
 }
 
 .k-donate{
     position: relative;
     text-align: center;
+    cursor: pointer;
 }
 
 
@@ -358,7 +417,7 @@ footer{
 }
 
 .k-random-donate{
-    background: #fff;
+    background: #eee;
     padding: 20px 15px;
     display: inline-flex;
     width: 75%;
@@ -385,4 +444,137 @@ footer{
 
 .k-donate-amount .k-button{
     width: 85%;
+}
+
+.k-hero-caption{
+    color: #fff;
+    position: absolute;
+    z-index: 5000;
+    text-shadow: 1px 1px #333;
+    bottom:15px;
+    left:15px;
+}
+
+.k-hero-caption small{
+    margin:0;
+    padding:0;
+}
+
+.k-hero-caption h4{
+    padding:0;
+    margin:0;
+}
+
+.k-navs-right-search{
+    display: none;
+}
+
+.k-navs-right-menu{
+    display: block;
+}
+
+.k-title{
+    margin: 0;
+    padding: 0;
+}
+
+.k-sub-title{
+    font-size: 24px;text-align: center;padding: 0 20%;
+}
+
+@media (min-width: 991px) {
+    .k-navs-middle{
+        display:table;
+    }
+    .k-navs-right-search{
+        display: block;
+    }
+
+    .k-navs-right-menu{
+        display: none;
+    }
+}
+
+.k-contact-locations{
+    border-right: solid 1px #000;
+    margin-right: 15px;
+    padding-right: 15px;
+    height: 100px;
+}
+
+.k-select{
+    background: -webkit-linear-gradient(top, #fff 50%, #f5f5f5 52%);
+    background: linear-gradient(to bottom, #fff 50%, #f5f5f5 52%);
+    border: 1px solid #e0e0e0;
+    border-radius: 3px;
+    width:160px;
+    height: 40px;
+}
+
+.k-select select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: none;
+    border: 1px solid transparent;
+    line-height: normal;
+    padding-right: 2.35em;
+    margin: 0;
+    padding: .6em .8em .5em;
+    width: 100%;
+    font-size:16px;
+}
+
+.k-address{
+    padding-left: 10px;
+}
+
+.k-address p{
+    padding:0;
+    margin:0;
+    font-size: 14px;
+}
+
+.k-site-link{
+    padding:5px;
+}
+
+.k-site-link a{
+    text-decoration: none;
+    color: #111111;
+}
+
+.k-site-link a:hover {
+    color: #206cf3;
+    text-decoration: underline;
+}
+
+.k-social{
+    padding:5px;
+    display: inline-flex;
+    cursor: pointer;
+}
+
+.k-social-label{
+    padding-top:15px;
+    padding-left:10px;
+}
+
+.k-contact-link{
+    padding-top: 5px;text-align: right;font-size: 14px;
+}
+
+.k-contact-link a{
+    color: #111;
+}
+
+@font-face {
+    font-family: BeautifulMess;
+    src: url(Beautiful%20Mess.ttf);
+    font-weight: bold;
+}
+
+.stelish-mark{
+    font-family: BeautifulMess;
+    font-size:28px;
 }
