--- a/view/index.html
+++ b/view/index.html
@@ -13,15 +13,24 @@
     <meta property="og:description" content="Koru Care NZ is a charity for children who have disabilities or a terminal illness. Koru Care are the only kids charity that do thr Trip of a Lifetime for these children, destinations include Disneyland and Goldcoast. Please show your support and donate to this worthy childrens charity." />
     <meta property="og:url" content="http://www.korucare.co.nz/" />
     <meta property="og:site_name" content="Koru Care NZ" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- build:css css/main-style.css -->
     <link href="vendor/fonts/roboto.css" rel="stylesheet">
     <link href="vendor/fonts/josefin.css" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
-
     <link href="vendor/aos/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/mediaelement/build/mediaelementplayer.min.css" />
+    <!-- endbuild -->
+
+    <!-- build:js js/vendor-dist.js -->
     <script src="vendor/mediaelement/build/jquery.js"></script>
     <script src="vendor/mediaelement/build/mediaelement-and-player.min.js"></script>
-    <link rel="stylesheet" href="vendor/mediaelement/build/mediaelementplayer.min.css" />
+    <script src="vendor/aos/aos.js"></script>
+    <!-- endbuild -->
 
+
+    <!-- build:js js/angular-2-dist.js -->
     <script src="../node_modules/core-js/client/shim.min.js"></script>
     <script src="../node_modules/zone.js/dist/zone.js"></script>
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
@@ -32,7 +41,7 @@
     <script src="../node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
     <script src="../node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
     <script src="../node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
-
+    <!-- endbuild -->
 
     <style>
         [aos="fade"] {
@@ -50,9 +59,8 @@
 
 <body-comp>Loading...</body-comp>
 
-
-
-<script src="../node_modules/ng2-simple-page-scroll/bundles/ng2-simple-page-scroll.js"></script>
+<!-- build:js js/client-dist.js -->
+<script type="text/javascript" src="js/directives/scrollDirective.js"></script>
 <script type="text/javascript" src="js/directives/mediaComponent.js"></script>
 <script type="text/javascript" src="js/directives/heroComponent.js"></script>
 <script type="text/javascript" src="js/directives/headerComponent.js"></script>
@@ -62,11 +70,9 @@
 <script type="text/javascript" src="js/directives/aboutComponent.js"></script>
 <script type="text/javascript" src="js/directives/footerComponent.js"></script>
 <script type="text/javascript" src="js/directives/bodyComponent.js"></script>
-
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-
-<script src="vendor/aos/aos.js"></script>
+<!-- endbuild -->
 
 <script>
     AOS.init({
@@ -87,4 +93,5 @@
     }
 </style>
 </body>
+<footer style="display: none;"></footer>
 </html>
