--- a/view/js/directives/donate.html
+++ b/view/js/directives/donate.html
@@ -17,7 +17,7 @@
         </svg>
     </div>
 
-    <div class="k-fixed-donate" data-aos="fade-up">
+    <div class="k-fixed-donate clearfix" data-aos="fade-up">
 
         <div class="k-donate-amount">
             <div class="k-donate-dollar">
