--- a/view/js/directives/regions.html
+++ b/view/js/directives/regions.html
@@ -1,25 +1,25 @@
 <div class="k-block" name="regions-comp" id="regions-comp">
     <div class="k-location-tiles" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <ul class="k-location-ul clearfix" data-aos="fade-up">
-            <li data-aos="fade-up">
+            <li data-aos="fade-up" title="Korucare North Island" (click)="goTo('http://www.korucare.co.nz/')">
                 <div class="k-location-tile k-auckland"></div>
-                <span class="k-location-label">Auckland Region</span>
-                <a class="k-tile-a" href="http://www.korucare.co.nz/">visit site >></a>
+                <span class="k-location-label">North Island Region</span>
+                <a class="k-tile-a">visit site</a>
             </li>
-            <li data-aos="fade-up">
+            <li data-aos="fade-up" title="Korucare Christchurch" (click)="goTo('www.korucare.org.nz/')">
                 <div class="k-location-tile k-christhurch"></div>
                 <span class="k-location-label">Christchurch Region</span>
-                <a class="k-tile-a" href="http://www.korucare.org.nz/">visit site >></a>
+                <a class="k-tile-a">visit site >></a>
             </li>
-            <li data-aos="fade-up">
+            <li data-aos="fade-up" title="Korucare Southland" (click)="goTo('http://www.korucareotago.org.nz/')">
                 <div class="k-location-tile k-southland"></div>
                 <span class="k-location-label">Otago Region</span>
                 <a class="k-tile-a" href="http://www.korucare.co.nz/">visit site >></a>
             </li>
-            <li data-aos="fade-up">
+            <li data-aos="fade-up" title="Korucare Otago" (click)="goTo('http://www.korucaresouthland.org.nz/')">
                 <div class="k-location-tile k-otago"></div>
                 <span class="k-location-label">Southland Region</span>
-                <a class="k-tile-a" href="http://www.korucaresouthland.org.nz/">visit site >></a>
+                <a class="k-tile-a">visit site >></a>
             </li>
         </ul>
     </div>
