--- a/view/style/style.css
+++ b/view/style/style.css
@@ -361,7 +361,7 @@ footer{
     background-size: cover !important;
 }
 .k-auckland{
-    background: url("../img/auckland/Image2.jpg") no-repeat;
+    background: url("../img/auckland/2016 disney gp.jpg") no-repeat;
     background-size: cover !important;
 }
 .k-southland{
