--- a/view/js/directives/about.html
+++ b/view/js/directives/about.html
@@ -1,5 +1,5 @@
 <div class="k-block" id="about-comp">
-    <h1 class="k-title">Koru Care NZ is an independent charity</h1>
+    <h1 class="k-title">Koru Care 4 NZ is an independent charity</h1>
     <div class="k-sub-title">and as such relies on the generosity and support of the community to make its trips possible. A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
     </div>
 
